# inbrief

./: .coverage  .cursorignore  .gitignore  404.html  README.md  app.py  index.html  mkdocs.yml  monster-ui-docs.md  notes.txt  objects.inv  pydantic-ai-rules.md  pyproject.toml  requirements.txt
about/: index.html
docs/: about.md  index.md
notebooks/: test.ipynb
src/: discovery_agent.py  docs_produced.py  document_summary.py  documents_produced.py  exhibits_agent.py  medical_records_agent.py  models.py  providers_agent.py  providers_listing.py  short_version_summary.py  short_versions.py  supporting_docs_agent.py  utils.py
src/context/: input.py  process.py
src/examples/: README.md  custom_dataset_evaluation.py  medical_records_example.py  summary_evaluation_example.py
src/graphs/: exhibits_graph.py  supporting_docs_graph.py
src/llm/: agent.py  error_handling.py  summary_metric.py
src/modules/: discovery_summary.py  document_summary.py  exhibits_research.py  medical_records_summary.py  short_version_summary.py
src/prompts/: base.py  examples.py  instructions.py
src/strategies/: base.py  factory.py  medical_only.py  primary_and_supporting.py  primary_only.py  supporting_only.py
src/summary_engine/: __init__.py  (+3 more)
tests/: __init__.py  example_discovery_usage.py  pydantic_metric.py  test_basic.py  test_discovery_summary.py  test_document_summary.py  test_documents_produced.py  test_error_handling.py  test_exhibits_research.py  test_integration.py  test_medical_records_summary.py  test_providers_listing.py  test_pydantic_metric.py  test_short_version_summary.py  test_strategies.py  test_summary_metric.py
(+11 files in other folders)
