[project]
name = "inbrief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "openai>=1.65.2",
    "pydantic>=2.10.6",
    "pydantic-ai-slim[openai]>=0.0.30",
    "pydantic-graph>=0.0.30",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.9.0",
]
